add lesson 5: Data Analysis Process - Case Study 2, Fuel economy

--- a/lessons/lesson4.ipynb
+++ b/lessons/lesson4.ipynb
@@ -1011,8 +1011,8 @@
     }
    ],
    "source": [
-    "print(\"{} acidity level is associated with highest average quality rating, which is {:.4f}.\"\\\n",
-    "    .format(mean_quality_by_acidity_level.idxmax(), mean_quality_by_acidity_level.max()))"
+    "print(f\"{mean_quality_by_acidity_level.idxmax()} acidity level is associated \"\n",
+    "      f\"with highest average quality rating, which is {mean_quality_by_acidity_level.max():.4f}.\" )"
    ],
    "metadata": {
     "collapsed": false,
@@ -1123,11 +1123,11 @@
     }
    ],
    "source": [
-    "print('Check that the number of entries in low/high alcohol sub-sets is equal to the number of all entries: {}'\n",
-    "    .format(len(df_wine.index) == len(low_alcohol_wines) + len(high_alcohol_wines)))\n",
+    "print(f\"Check that the number of entries in low/high alcohol sub-sets is equal to the number of all entries: \"\n",
+    "      f\"{len(df_wine.index) == len(low_alcohol_wines) + len(high_alcohol_wines)}\" )\n",
     "\n",
-    "print('Check that the entries in low/high alcohol sub-sets are disjoint: {}'\n",
-    "    .format(set(low_alcohol_wines.index.values).isdisjoint(set(high_alcohol_wines.index.values))))"
+    "print(f\"Check that the entries in low/high alcohol sub-sets are disjoint: \"\n",
+    "      f\"{set(low_alcohol_wines.index.values).isdisjoint(set(high_alcohol_wines.index.values))}\" )"
    ],
    "metadata": {
     "collapsed": false,
@@ -1153,14 +1153,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wines with low alcohol, mean rating:  5.475920679886686\n",
-      "Wines with high alcohol, mean rating: 6.146084337349397\n"
+      "Wines with low alcohol, mean rating:  5.4759\n",
+      "Wines with high alcohol, mean rating: 6.1461\n"
      ]
     }
    ],
    "source": [
-    "print('Wines with low alcohol, mean rating: ', low_alcohol_wines[Col.quality].mean())\n",
-    "print('Wines with high alcohol, mean rating:', high_alcohol_wines[Col.quality].mean())"
+    "print(f\"Wines with low alcohol, mean rating:  {low_alcohol_wines[Col.quality].mean():.4f}\")\n",
+    "print(f\"Wines with high alcohol, mean rating: {high_alcohol_wines[Col.quality].mean():.4f}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -1271,11 +1271,11 @@
     }
    ],
    "source": [
-    "print('Check that the number of entries in low/high sigar sub-sets is equal to the number of all entries: {}'\n",
-    "    .format(len(df_wine.index) == len(low_sugar_wines) + len(high_sugar_wines)))\n",
+    "print(f\"Check that the number of entries in low/high sigar sub-sets is equal to the number of all entries: \"\n",
+    "      f\"{len(df_wine.index) == len(low_sugar_wines) + len(high_sugar_wines)}\" )\n",
     "\n",
-    "print('Check that the entries in low/high sugar sub-sets are disjoint: {}'\n",
-    "    .format(set(low_sugar_wines.index.values).isdisjoint(set(high_sugar_wines.index.values))))"
+    "print(f\"Check that the entries in low/high sugar sub-sets are disjoint: \"\n",
+    "      f\"{set(low_sugar_wines.index.values).isdisjoint(set(high_sugar_wines.index.values))}\" )"
    ],
    "metadata": {
     "collapsed": false,
@@ -1304,8 +1304,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wines with low sugar, mean rating:  5.808800743724822\n",
-      "Wines with high sugar, mean rating: 5.82782874617737\n"
+      "Wines with low sugar, mean rating:  5.8088\n",
+      "Wines with high sugar, mean rating: 5.8278\n"
      ]
     }
    ],
@@ -1313,8 +1313,8 @@
     "mean_quality_low_sugar = low_sugar_wines[Col.quality].mean()\n",
     "mean_quality_high_sugar = high_sugar_wines[Col.quality].mean()\n",
     "\n",
-    "print('Wines with low sugar, mean rating: ', mean_quality_low_sugar)\n",
-    "print('Wines with high sugar, mean rating:', mean_quality_high_sugar)"
+    "print(f\"Wines with low sugar, mean rating:  {mean_quality_low_sugar:.4f}\")\n",
+    "print(f\"Wines with high sugar, mean rating: {mean_quality_high_sugar:.4f}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -1994,7 +1994,7 @@
     "plt.title('Proportions by wine color and quality', fontsize=title_font_size)\n",
     "plt.xlabel('Quality', fontsize=16)\n",
     "plt.ylabel('Proportion', fontsize=16)\n",
-    "plt.legend();"
+    "plt.legend();\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -2006,9 +2006,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyCharm (python-examples)",
+   "name": "python-examples",
    "language": "python",
-   "name": "pycharm-aa33d817"
+   "display_name": "Python (python-examples)"
   },
   "language_info": {
    "codemirror_mode": {
