--- a/project/02_exploratory_data_analysis_and_conclusions.ipynb
+++ b/project/02_exploratory_data_analysis_and_conclusions.ipynb
@@ -12,7 +12,7 @@
     "    - <a href='#population-and-democracy'>Population and democracy</a>\n",
     "    - <a href='#population-and-wealth'>Population and wealth</a>\n",
     "    - <a href='#correlation-population-democracy'>Correlation between population and democracy</a>\n",
-    "  - <a href='#population-distribution'>Research question 2: Democracy and fuel exports vs. wealth</a>\n",
+    "  - <a href='#democracy-and-wealth'>Research question 2: Democracy and fuel exports vs. wealth</a>\n",
     "    - <a href='#wealthiest-countries-regime-type'>Regime types of wealthiest countries</a>\n",
     "    - <a href='#gpd-share-per-regime-type'>Share of global GDP per regime type</a>\n",
     "    - <a href='#fuel-exports-authoritarian'>Fuel exports and GDP for authoritarian countries</a>\n",
@@ -743,7 +743,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The biggest countries a hybrid regime:"
+    "The biggest countries with a hybrid regime:"
    ],
    "metadata": {
     "collapsed": false
@@ -1421,7 +1421,7 @@
     "Some questions will be:\n",
     "- What are the regime types for the wealthiest countries?\n",
     "- What share of global GDP is produced in each regime type?\n",
-    "- What is the average productivity in each regime type?\n",
+    "- What is the average GDP per capita in each regime type?\n",
     "- Is there a correlation between GDP per capita and having fuel exports (being \"oil-rich\") for non-democratic countries?\n",
     "- Is there a correlation between GDP per capita and democracy index?"
    ],
@@ -1762,7 +1762,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Average productivity/GDP per capita in each regime type\n",
+    "### Average GDP per capita in each regime type\n",
     "\n",
     "We also want to find out the average GDP per capita in each regime type."
    ],
@@ -2369,8 +2369,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "                                                    Pearson correlation coefficient  \\\nPopulation and democracy index                                                -0.01   \nGDP per capita and fuel exports percentage for ...                            -0.00   \nGDP per capita and fuel exports percentage for ...                             0.52   \nGDP per capita and democraticy index                                           0.58   \nGDP per capita and democraticy index without \"o...                             0.66   \n\n                                                   Interpretation of correlation strength  \nPopulation and democracy index                                                       None  \nGDP per capita and fuel exports percentage for ...                                   None  \nGDP per capita and fuel exports percentage for ...                                Notable  \nGDP per capita and democraticy index                                              Notable  \nGDP per capita and democraticy index without \"o...                      Notable to strong  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Pearson correlation coefficient</th>\n      <th>Interpretation of correlation strength</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Population and democracy index</th>\n      <td>-0.01</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>GDP per capita and fuel exports percentage for authoritarian countries</th>\n      <td>-0.00</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>GDP per capita and fuel exports percentage for democratic countries</th>\n      <td>0.52</td>\n      <td>Notable</td>\n    </tr>\n    <tr>\n      <th>GDP per capita and democraticy index</th>\n      <td>0.58</td>\n      <td>Notable</td>\n    </tr>\n    <tr>\n      <th>GDP per capita and democraticy index without \"oil-rich\" countries</th>\n      <td>0.66</td>\n      <td>Notable to strong</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                                                    Pearson correlation coefficient  \\\nPopulation and democracy index                                                -0.01   \nGDP per capita and fuel exports percentage for ...                            -0.00   \nGDP per capita and fuel exports percentage for ...                             0.52   \nGDP per capita and democracy index                                             0.58   \nGDP per capita and democracy index without \"oil...                             0.66   \n\n                                                   Interpretation of correlation strength  \nPopulation and democracy index                                                       None  \nGDP per capita and fuel exports percentage for ...                                   None  \nGDP per capita and fuel exports percentage for ...                                Notable  \nGDP per capita and democracy index                                                Notable  \nGDP per capita and democracy index without \"oil...                      Notable to strong  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Pearson correlation coefficient</th>\n      <th>Interpretation of correlation strength</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Population and democracy index</th>\n      <td>-0.01</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>GDP per capita and fuel exports percentage for democratic countries</th>\n      <td>-0.00</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>GDP per capita and fuel exports percentage for authoritarian countries</th>\n      <td>0.52</td>\n      <td>Notable</td>\n    </tr>\n    <tr>\n      <th>GDP per capita and democracy index</th>\n      <td>0.58</td>\n      <td>Notable</td>\n    </tr>\n    <tr>\n      <th>GDP per capita and democracy index without \"oil-rich\" countries</th>\n      <td>0.66</td>\n      <td>Notable to strong</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "execution_count": 63,
      "metadata": {},
@@ -2390,10 +2390,10 @@
     "          [corrcoef(df_without_oil_rich[ColGdp.gdp_per_capita], df_without_oil_rich[ColDem.democracy_index]),\n",
     "           \"Notable to strong\"]],\n",
     "    index=[\"Population and democracy index\",\n",
-    "           \"GDP per capita and fuel exports percentage for authoritarian countries\",\n",
     "           \"GDP per capita and fuel exports percentage for democratic countries\",\n",
-    "           \"GDP per capita and democraticy index\",\n",
-    "           \"GDP per capita and democraticy index without \\\"oil-rich\\\" countries\"],\n",
+    "           \"GDP per capita and fuel exports percentage for authoritarian countries\",\n",
+    "           \"GDP per capita and democracy index\",\n",
+    "           \"GDP per capita and democracy index without \\\"oil-rich\\\" countries\"],\n",
     "    columns=[\"Pearson correlation coefficient\", \"Interpretation of correlation strength\"])\n",
     "df_correlations.iloc[:, 0] = df_correlations.iloc[:, 0].round(2)\n",
     "df_correlations"
